# lubuntu-update

./: CMakeLists.txt  README.md  aptmanager.cpp  aptmanager.h  conffilehandlerdialog.ui  conffilewidget.cpp  diffdisplaydialog.ui  gen_ts.sh  ipcfilewatcher.h  lubuntu-update-autostart.desktop  lubuntu-update-backend  lubuntu-update.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orchestrator.cpp  orchestrator.h
debian/: changelog  control  copyright  files  lubuntu-update-notifier.install  lubuntu-update-notifier.postinst  rules
src/: aptmanager.cpp  aptmanager.h  conffilehandlerdialog.cpp  conffilehandlerdialog.h  conffilewidget.cpp  conffilewidget.h  conffilewidget.ui  diffdisplaydialog.cpp  diffdisplaydialog.h  ipcfilewatcher.cpp  lubuntu-update-backend  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  orchestrator.cpp  orchestrator.h  releaseupgradewindow.cpp  releaseupgradewindow.h  releaseupgradewindow.ui  resources.qrc  translations.qrc  upgradedelaywindow.cpp  upgradedelaywindow.h  upgradedelaywindow.ui  windowshowwatcher.cpp  windowshowwatcher.h
src/translations/: lubuntu-update_en_US.ts  lubuntu-update_es_ES.ts  lubuntu-update_zh_CN.ts
